Refactor ProductService to include category filtering and enhance product search functionality; streamline response conversion and improve code clarity